# talent-match-platform

./: .dockerignore  .env.example  .funcignore  .gitignore  Dockerfile  LICENSE  PRD.md  QA_DEPLOYMENT_GUIDE.md  README.md  TF_REUSE_PRD.md  alembic.ini  function_app.py  host.json  pyproject.toml  requirements.txt
.github/: instructions.md  prompt-main.md
.github/agents/: speckit.clarify.agent.md  speckit.plan.agent.md  speckit.specify.agent.md
.github/workflows/: ci.yml  codeql.yml  publish-api.yml  publish-functions.yml  run-migrations.yml  terraform-apply.yml  terraform-plan.yml
.specify/memory/: constitution.md
api/: __init__.py  auth.py  deps.py  durable_client.py  main.py  models.py  routes_artifacts.py  routes_assess.py  routes_runs.py
apim/apis/: README.md
apim/policies/: correlation-id.xml  redaction.xml  (+2 more)
db/: __init__.py  connection.py  repository.py
docs/: application-tracing.md  ghcs-setup.md  platform-features.md  testing.md
orchestrator/: __init__.py  engine_contracts.py  sb_contracts.py
runtime/: __init__.py  config.py  errors.py  events.py  telemetry.py  transient.py
scripts/: deploy-fake-engine.sh  qa-orchestration-validate.sh  stage-cv.sh
tests/: conftest.py  test_aggregate.py  test_api_runs.py  test_auth.py  test_dispatch_run.py  test_e2e_real_engine_3cv_prompt4.py  test_e2e_real_engine_aggregation.py  test_execute_with_retry.py  test_fake_engine.py  test_live_events.py  test_progress_state.py  test_repo_idempotency.py  test_result_intake.py  test_routes_assess.py  test_shared_aggregation.py  test_sql_retry.py  test_traceability.py
(+84 files in other folders)
