[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "awr-platform"
version = "0.1.0"
description = "AWR Platform – REST API, orchestration, and persistence layer"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110,<1",
    "uvicorn[standard]>=0.29,<1",
    "pydantic>=2,<3",
    "pydantic-settings>=2,<3",
    "azure-identity>=1.16,<2",
    "azure-storage-blob>=12.20,<13",
    "azure-servicebus>=7.12,<8",
    "azure-functions>=1.18,<2",
    "azure-functions-durable>=1.2,<2",
    "opentelemetry-api>=1.24,<2",
    "opentelemetry-sdk>=1.24,<2",
    "opentelemetry-instrumentation-fastapi>=0.45b0",
    "opentelemetry-instrumentation-logging>=0.45b0",
    "opentelemetry-exporter-otlp>=1.24,<2",
    "azure-monitor-opentelemetry-exporter>=1.0.0b21",
    "python-jose[cryptography]>=3.3,<4",
    "httpx>=0.27,<1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8,<9",
    "pytest-asyncio>=0.23,<1",
    "pytest-cov>=5,<6",
    "ruff>=0.4,<1",
    "mypy>=1.10,<2",
    "respx>=0.21,<1",
]

[tool.hatch.build.targets.wheel]
packages = ["api", "orchestrator", "runtime"]

[tool.ruff]
target-version = "py311"
line-length = 120
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "RUF"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
